apps/base/home-assistant/node-red/node-red-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-red-ingressroute
  namespace: home-assistant
  annotations:
    gethomepage.dev/href: "https://node-red.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Node-RED"
    gethomepage.dev/description: "Flows & automations for Home Assistant"
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/nodered.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`node-red.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: node-red
          port: 80
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
  tls: {}
